deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: yougo-ui
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deployment: yougo-ui
  sessionAffinity: None
  type: ClusterIP
