deploy/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: yougo-ui
  namespace: yougo
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: yougo-ui
    weight: 100
  wildcardPolicy: None
